test/classes/deinitializers/deinitAndDestruct.good
deinitAndDestruct.chpl:12: error: ambiguous call 'unmanaged C.deinit()'
deinitAndDestruct.chpl:2: note: candidates are: C.~C()
deinitAndDestruct.chpl:6: note:                 C.deinit()
